# binny

./: .gitignore  Cargo.toml  README.md  correlation_assessment.xlsx
resources/: BTCUSDT_klines.txt  ETHUSDT_klines.txt  binance_symbols.txt  correlations.txt
src/: errors.rs  main.rs  math.rs  models.rs
src/binance/: account.rs  api.rs  historical.rs  mod.rs  stream.rs  trade_book.rs  trading.rs  websocket.rs
src/fs/: mod.rs  parse.rs  read.rs  write.rs
src/strategy/: decision.rs  mod.rs  simple.rs
