[package]
name = "binny"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
ndarray-linalg = "0.17.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
url = "2.1.0"

